<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_contact_us"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="com.example.myapplication.contactUs">

    <TextView
        android:text="@string/address2"
        android:textColor="#000000"
        android:textSize="25sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/address1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="13dp"
        android:id="@+id/address2" />

    <TextView
        android:text="@string/phone"
        android:textColor="#000000"
        android:textSize="25sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="19dp"
        android:id="@+id/phone"
        android:layout_below="@+id/address2"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/email"
        android:textColor="#000000"
        android:textSize="25sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:id="@+id/email"
        android:layout_below="@+id/phone"
        android:layout_centerHorizontal="true" />


    <TextView
        android:text="@string/website"
        android:layout_width="match_parent"
        android:id="@+id/bottomBar"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:background="#FF9F23"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textSize="22sp"
        android:layout_height="31dp" />

    <TextView
        android:text=""
        android:layout_width="match_parent"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/logoBar"
        android:background="#FF9F23"
        android:layout_height="60dp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/permapavelogowhite"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/imageView4"
        android:layout_alignBottom="@+id/logoBar"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp" />

    <TextView
        android:text="@string/address1"
        android:textColor="#000000"
        android:textSize="25sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:id="@+id/address1"
        android:layout_below="@+id/contact"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="Contact Us"
        android:textColor="#000000"
        android:textSize="36sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/contact"
        android:layout_marginTop="42dp"
        android:layout_below="@+id/logoBar"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="Back"
        android:textAllCaps="false"
        android:id="@+id/backButton"
        android:textSize="30sp"
        android:textColor="#FFFFFF"
        android:layout_width="881dp"
        android:background="@drawable/buttonshape"
        style="@style/Widget.AppCompat.Button"
        android:layout_height="50dp"
        android:onClick="back"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="60dp"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp" />

    <Button
        android:text="Send a Message"
        android:textAllCaps="false"
        android:id="@+id/sendButton"
        android:textSize="30sp"
        android:textColor="#FFFFFF"
        android:layout_width="881dp"
        android:background="@drawable/buttonshape"
        style="@style/Widget.AppCompat.Button"
        android:layout_height="50dp"
        android:onClick="goToMessageURL"
        android:layout_above="@+id/backButton"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="20dp" />

</RelativeLayout>